Moved CSS and JS files outside public folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aura Game</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aura Game</title>
+    <link href="https://fonts.cdnfonts.com/css/venite-adoremus" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="game-container">
-    <h1>Aura Game</h1>
-    <div id="roll-button" class="button">Roll Aura</div>
-    <div id="roll-history" class="button">Roll History</div>
-    <div id="inventory" class="button">Inventory</div>
-    <div id="result"></div>
-  </div>
-  <script src="script.js"></script>
+    <div class="container">
+        <h1 class="title">Aura Game</h1>
+
+        <div id="rollResult">
+            <div class="result-header">
+                <p>You got:</p>
+                <p id="auraName" class="aura-name"></p>
+                <img id="auraImage" class="aura-image" src="" alt="Aura Image" />
+            </div>
+            <div class="buttons">
+                <button id="saveButton">Save</button>
+                <button id="skipButton">Skip</button>
+            </div>
+        </div>
+
+        <div class="controls">
+            <button id="rollButton">Roll Aura</button>
+        </div>
+
+        <div class="roll-history">
+            <h3>Roll History</h3>
+            <ul id="historyList"></ul>
+        </div>
+
+        <div class="inventory">
+            <h3>Inventory</h3>
+            <input type="text" id="searchInventory" placeholder="Search Inventory" />
+            <ul id="inventoryList"></ul>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
